# fluxpro

./: README.md  main.py  pyproject.toml
fluxpro/: main.py
src/fluxpro/: blank_handler.py  cli.py  config.py  data_standardizer.py  main.py  output.py  plotting.py  process.py
tests/: conftest.py  test_cli.py  test_config.py  test_data_standardizer.py  test_fluxpro.py  test_plotting.py  test_process.py
tests/expected/case1/: FTIR_0304_out.csv  ammonia_all.csv  ammonia_avg.csv  carbon_dioxide_all.csv  carbon_dioxide_avg.csv  methane_all.csv  methane_avg.csv  nitrogen_dioxide_all.csv  nitrogen_dioxide_avg.csv  nitrous_oxide_all.csv  nitrous_oxide_avg.csv  ozone_all.csv  ozone_avg.csv
tests/expected/case2/: no_all.csv  no_avg.csv  noy-no_all.csv  noy-no_avg.csv  noy_all.csv  noy_avg.csv
tests/expected/case3/: 2025_11_08_NO2_HONO_Channel1_Data_out.csv  co2_all.csv  co2_avg.csv  hono_all.csv  hono_avg.csv  no2_all.csv  no2_avg.csv
tests/test-data/: FTIR_0304.csv  NOy_0404_CRED.csv  TELEDYNE.txt  config.toml
tests/test-data/expected/: plot.json
tests/test-data/expected/airyx/: AIRYX_1_out.csv
tests/test-data/expected/case1/: FTIR_0304_2_out.csv  FTIR_0304_3_out.csv  FTIR_0304_4_out.csv  FTIR_0304_5_out.csv  FTIR_0304_6_out.csv  FTIR_0304_out.csv
tests/test-data/expected/case2/: NOy_0404_CRED_2_out.csv  NOy_0404_CRED_3_out.csv  NOy_0404_CRED_4_out.csv  NOy_0404_CRED_5_out.csv  NOy_0404_CRED_6_out.csv  NOy_0404_CRED_out.csv
tests/test-data/expected/case3/: 2025_11_08_NO2_HONO_Channel1_Data_1_out.csv  2025_11_08_NO2_HONO_Channel1_Data_2_out.csv  2025_11_08_NO2_HONO_Channel1_Data_out.csv
tests/test-data/expected/ftir/: FTIR_2_out.csv  FTIR_3_out.csv  FTIR_4_out.csv  FTIR_5_out.csv  FTIR_6_out.csv
tests/test-data/expected/teledyne/: TELEDYNE_2_out.csv  TELEDYNE_3_out.csv  TELEDYNE_4_out.csv  TELEDYNE_5_out.csv  TELEDYNE_6_out.csv
