[project]
name = "fluxpro"
version = "0.1.0"
requires-python = ">=3.12"
description = "Process data from Teledyne NOy analyser and FTIR"
readme = "README.md"
authors = [
  { name = "James Gardner", email = "james.gardner1421@gmail.com" },
  { name = "Megan Purchase", email = "megpurch2798@gmail.com" }
]
dependencies = [
  "pandas>=2.3.3",
  "numpy>=2.3.4",
]

[project.urls]
Repository = "https://github.com/MeganPurchase/fluxpro"

[project.scripts]
fluxpro = "fluxpro.main:main"

[tool.uv]
dev-dependencies = [
  "ruff>=0.14.4",
  "pytest>=9.0.0"
]

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

