[project]
name = "fluxpro"
version = "1.1.0"
requires-python = ">=3.12"
description = "Process data from Teledyne NOy analyser and FTIR"
readme = "README.md"
authors = [
  { name = "James Gardner", email = "james.gardner1421@gmail.com" },
  { name = "Megan Purchase", email = "megpurch2798@gmail.com" }
]
dependencies = [
  "altair>=6.0.0",
  "click>=8.3.1",
  "matplotlib>=3.10.8",
  "numpy>=2.3.4",
  "polars>=1.35.2",
  "vegafusion>=2.0.3",
  "vl-convert-python>=1.9.0",
]

[project.urls]
Repository = "https://github.com/MeganPurchase/fluxpro"

[project.scripts]
fluxpro = "fluxpro.cli:cli"

[dependency-groups]
dev = [
  "ruff>=0.14.4",
  "pytest>=9.0.0",
  "pytest-cov>=7.0.0",
]

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[tool.pyright]
venvPath='.'
venv=".venv"
exclude=['.venv']

[tool.pytest.ini_options]
addopts = "--cov=fluxpro --cov-report=term-missing --no-cov-on-fail"
